Fixing breaks in form.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
 body {
     font-family: Libre+Baskerville;
     width: 800px;
-    text-align: center;
+    margin: auto;
 }
 
 footer .container {
